Initial code was added for integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=excel_report
 server.port = 9091
-server.servlet.context-path = /socioPuff
+server.servlet.context-path = /excel_report
 
 ## DataBase properties
 spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/sociopuff?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = Kumar@786
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+
+## Logging properties
+logging.level.org.springframework.mail = DEBUG
+logging.level.org.springframework.security = DEBUG
